fixed title overlap with scale

--- a/style.css
+++ b/style.css
@@ -195,3 +195,8 @@ a{
   font-size: 16px;
 
 }
+
+#question{
+  margin-top: 40px;
+  padding-right: 60px;
+}
